versions/3.5.0/docs/TaskType.md
# TaskType


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**type** | **str** |  | 
**display_name** | **str** |  | 
**display_group** | **str** |  | 
**input_type** | **str, none_type** |  | 
**abortable** | **bool** |  | 
**arg_template** | **{str: (str, none_type)}, none_type** |  | 
**arg_types** | [**{str: (ArgumentType,)}**](ArgumentType.md) |  | [readonly] 
**required_args** | **[str]** |  | 
**output_names** | **{str: (str,)}** |  | 
**output_types** | [**{str: (ArgumentType,)}**](ArgumentType.md) |  | [readonly] 
**parameters_editor_component** | **str, none_type** |  | 
**superuser_only** | **bool** |  | 
**icon_class** | **str, none_type** |  | 
**is_available** | **bool** |  | [readonly] 
**allow_in_jobs** | **bool** |  | 
**new_since_version** | **str, none_type** |  | 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


